--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,15 +36,15 @@ jobs:
           utcOffset: "+09:00"
 
       - name: Show current time
-        runs: echo "CurrentTime=$"
+        run: echo "CurrentTime=${{ steps.current-time.outputs.formattedTime }}"
         shell: bash
 
       - name: Generate deployment package
         run: |
           mkdir -p deploy
-          cp build/libs/*.jar deploy/applicaion.jar
+          cp build/libs/*.jar deploy/application.jar
           cp Procfile deploy/Procfile
-          cp -r .ebextensions deploy/.ebextensions
+          cp -r .ebextensions-dev deploy/.ebextensions
           cp -r ./platform deploy/.platform
           cd deploy && zip -r deploy.zip .
 
