--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           cp build/libs/*.jar deploy/application.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions-dev deploy/.ebextensions
-          cp -r ./platform deploy/.platform
+          cp -r .platform deploy/.platform
           cd deploy && zip -r deploy.zip .
 
       - name: EB deploy
