--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,6 @@ spring:
     password: ${DEV_RDS_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-        hbm2ddl:
-          auto: update
-        default_batch_fetch_size: 1000
+    hibernate:
+      ddl-auto: update
+    show-sql: true
