--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,19 @@
 spring:
   datasource:
-    url: ${DEV_RDS_ENDPOINT}
-    username: ${DEV_RDS_USERNAME}
-    password: ${DEV_RDS_PASSWORD}
+    url: jdbc:mysql://testvpc-db.cdyqug0y0dy3.ap-northeast-2.rds.amazonaws.com:3306/hython
+    username: root
+    password: hythonteam3
     driver-class-name: com.mysql.cj.jdbc.Driver
+  sql:
+    init:
+      mode: never
   jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        use_sql_comments: true
+        hbm2ddl:
+          auto: create
+        default_batch_fetch_size: 1000
