--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,5 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         use_sql_comments: true
         hbm2ddl:
-          auto: create
+          auto: update
         default_batch_fetch_size: 1000
