--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,4 @@ spring:
           auto: update
         default_batch_fetch_size: 1000
   jwt:
-    secret: ${JWT_SECRET}
+    secret: nR5cCI6IxpoNGY8ZVziIyMDIwMjJ9hbGciOyJzCJe8bGwv
