--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://testvpc-db.cdyqug0y0dy3.ap-northeast-2.rds.amazonaws.com:3306/hython
+    url: jdbc:mysql://hython-dev.cdyqug0y0dy3.ap-northeast-2.rds.amazonaws.com:3306/hython
     username: root
     password: hythonteam3
     driver-class-name: com.mysql.cj.jdbc.Driver
